typescript/checker/tests/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens9.ts.stderr
error: Expected unicode escape
 --> $DIR/tests/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens9.ts:2:9
  |
2 | /*foo*/ \ /*bar*/
  |         ^

